configuro y pruebo hibernate